<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/energy_settings_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/energy_settings_description"
        android:textColor="@color/login_text_color"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/energy_icon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:weightSum="2">

        <TextView
            android:layout_gravity="center"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/keep_enabled"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/energy_settings_dont_disable"
            android:textColor="@color/login_text_color"
            android:textSize="20sp" />

        <TextView
            android:layout_gravity="center"
            android:background="@drawable/bg_rect_round_green_64"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/disable"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/energy_settings_disable"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>